<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.app</groupId>
	<artifactId>jPilot</artifactId>
	<packaging>jar</packaging>
	<version>1.0</version>
	<name>jPilot</name>
	<url>http://maven.apache.org</url>
	<properties>
	 <slf4j.version>1.7.25</slf4j.version>
	</properties>
	
	<dependencies>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
	 <dependency>
          <groupId>commons-lang</groupId>
          <artifactId>commons-lang</artifactId>
          <version>2.5</version>
      </dependency>
      <dependency>
          <groupId>commons-codec</groupId>
          <artifactId>commons-codec</artifactId>
          <version>1.7</version>
      </dependency>
      <dependency>
		    <groupId>org.jasypt</groupId>
		    <artifactId>jasypt</artifactId>
		    <version>1.9.2</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>jPilot</finalName>
		<plugins>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.6.2</version>
		        <configuration>
		          <source>1.8</source>
		          <target>1.8</target>
		        </configuration>
           </plugin>
           <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.vgr.app.Application</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
		
	</build>
</project>
